# c-project-starter

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  Makefile  README.md
include/: my_header.h
src/: main.c  my_header.c
